--- a/ControladorRobo/app/src/main/res/values/strings.xml
+++ b/ControladorRobo/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="action_settings">Settings</string>
     <string name="none_paired">Nenhum aparelho pareado!</string>
     <string name="txtTitlePairedDevices">Dispositivos pareados</string>
+    <string name="txtBtnToControlador">Ir para Controlador</string>
+    <string name="txtLdr">LDR</string>
+    <string name="txtHumidade">Humidade</string>
+    <string name="txtTemperatura">Temperatura</string>
+    <string name="txtVlLdr" />
+    <string name="txtVlTemperatura" />
+    <string name="txtVlHumidade" />
 </resources>
