Arduino com sensores conectados - falta o app ler os valores dos sensores v02

--- a/ControladorRobo/app/src/main/res/values/strings.xml
+++ b/ControladorRobo/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="txtVlLdr" />
     <string name="txtVlTemperatura" />
     <string name="txtVlUmidade" />
+    <string name="txtVelocidade">Velocidade</string>
+    <string name="txtVlVelocidade"></string>
 </resources>
